# monorepo

./: .claude-env.example  .context-link  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .rules  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  Dockerfile.telegram-dev  GUIA_pt-BR.md  HARDWARE_HIERARCHY.md  HOMELAB_CONTEXT_TREE.md  LICENSE  Makefile  NOTICE  QUICKREF_pt-BR.md  README.md  REFERENCE-blueprint.md  ROADMAP.md  SECURITY.md  SETUP.md  SPEC-001-core-swarm.md  SPEC-002-redis-queues.md  SPEC-004-whatsapp-integration.md  SPEC-005-rag-pipeline.md  SPEC-006-billing-stripe.md  SPEC-007-deployment.md  SPEC-008-agent-agents.md  SPEC-076-voice-eval-worksheet.md  (+58 more)
.claude/: MISSIONS.md  RESTART-SPEC302.md  onprompt.md  pipeline.json  scheduled_tasks.json  settings.json
.claude-events/: .gitignore  README.md  event-emit.sh  inotify-watch.sh  install-links.sh  state-manager.py  trigger-bridge.sh
apps/perplexity-agent/: .dockerignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  package.json  pyproject.toml  tsconfig.json
apps/perplexity-agent/.streamlit/: config.toml
apps/perplexity-agent/agent/: __init__.py  browser_agent.py  chrome_profile.py
apps/perplexity-agent/components/: oauth_personas.py
apps/perplexity-agent/e2e/: openclaw-mcp-test.js  openclaw-mcp.spec.ts  perplexity.spec.ts  playwright.config.ts  run-e2e.sh  smoke-test.sh
apps/perplexity-agent/playwright-report/: index.html
(+3299 files in other folders)
