[project]
name = "perplexity-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    # infisical-python - installed system-wide, import via subprocess
    "langchain-openai>=1.1.9",
    "streamlit>=1.56.0",
]
